[package]
name = "app_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.0.4"
diesel_cli = { version = "2.0.1", default-features = false, features = ["sqlite"] }
fltk="1.3.13"
fltk-table="0.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85" 
